--- a/index.html
+++ b/index.html
@@ -77,10 +77,15 @@
         <nav
           class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 pl-3 pl-lg-5"
         >
-          <a href="" class="navbar-brand">
-            <h1 class="m-0 text-secondary">
+          <a href="index.html" class="navbar-brand">
+            <img
+              style="width: 200px"
+              src="img/JKOBS SPOTLESS SOLUTIONS 1.png"
+              alt=""
+            />
+            <!-- <h1 class="m-0 text-secondary">
               <span class="text-primary">SPOT</span>LESS
-            </h1>
+            </h1> -->
           </a>
           <button
             type="button"
@@ -131,9 +136,11 @@
               <div class="p-3" style="max-width: 900px">
                 <h4 class="text-white text-uppercase mb-md-3"></h4>
                 <h1 class="display-3 text-white mb-md-4">
-                  Best For LaundRY Services
+                  Best For all your cleaning service
                 </h1>
-                <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2"
+                <a
+                  href="about.html"
+                  class="btn btn-primary py-md-3 px-md-5 mt-2"
                   >Learn More</a
                 >
               </div>
@@ -146,7 +153,7 @@
             >
               <div class="p-3" style="max-width: 900px">
                 <h4 class="text-white text-uppercase mb-md-3">
-                  Residential Cleaning
+                  Residential & Industrial Cleaning
                 </h4>
                 <h1 class="display-3 text-white mb-md-4">
                   Highly Professional Staff
@@ -204,7 +211,7 @@
               <i class="fa fa-2x fa-envelope text-white m-0 mr-3"></i>
               <div class="d-flex flex-column">
                 <h5 class="text-white font-weight-medium">Email Us</h5>
-                <p class="m-0 text-white">info@example.com</p>
+                <p class="m-0 text-white"></p>
               </div>
             </div>
           </div>
@@ -216,7 +223,7 @@
               <i class="fa fa-2x fa-phone-alt text-white m-0 mr-3"></i>
               <div class="d-flex flex-column">
                 <h5 class="text-white font-weight-medium">Call Us</h5>
-                <p class="m-0 text-white">+012 345 6789</p>
+                <p class="m-0 text-white">234 7040414390</p>
               </div>
             </div>
           </div>
@@ -238,14 +245,14 @@
             </h6>
             <h1 class="mb-4">We Are Quality Laundry Provider In Your City</h1>
             <h5 class="font-weight-medium font-italic mb-4">
-              Clita sit et ipsum sed. Volup duo sea dolor rebum ea rebum kasd
-              stet. Dolor at duo dolor sit stet.
+              Our cleaning company offers a range of cleaning services including
+              residential cleaning, commercial cleaning, move-in/move-out
+              cleaning, deep cleaning, and post-construction cleaning.
             </h5>
             <p class="mb-2">
-              Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo
-              dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo.
-              Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est
-              dolor
+              We can clean your home or office as often as you need us to. We
+              offer daily, weekly, bi-weekly, and monthly cleaning schedules, as
+              well as one-time cleanings and special event cleaning.
             </p>
             <div class="row">
               <div class="col-sm-6 pt-3">
@@ -276,7 +283,7 @@
                 <div class="d-flex align-items-center">
                   <i class="fa fa-check text-primary mr-2"></i>
                   <p class="text-secondary font-weight-medium m-0">
-                    100% Satisfaction Gguarantee
+                    100% Satisfaction Guarantee
                   </p>
                 </div>
               </div>
@@ -322,7 +329,7 @@
               >
                 <i class="fas fa-3x fa-soap text-secondary"></i>
               </div>
-              <h4 class="font-weight-bold m-0">Wash & Laundry</h4>
+              <h4 class="font-weight-bold m-0">Industrial Cleaning</h4>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 pb-1">
@@ -375,11 +382,11 @@
             </p>
             <div class="row">
               <div class="col-sm-6 mb-4">
-                <h1 class="text-secondary" data-toggle="counter-up">10</h1>
+                <h1 class="text-secondary" data-toggle="counter-up">3</h1>
                 <h5 class="font-weight-bold">Years Expereince</h5>
               </div>
               <div class="col-sm-6 mb-4">
-                <h1 class="text-secondary" data-toggle="counter-up">250</h1>
+                <h1 class="text-secondary" data-toggle="counter-up">10</h1>
                 <h5 class="font-weight-bold">Expert Worker</h5>
               </div>
               <div class="col-sm-6 mb-4">
@@ -387,7 +394,7 @@
                 <h5 class="font-weight-bold">Happy Clients</h5>
               </div>
               <div class="col-sm-6 mb-4">
-                <h1 class="text-secondary" data-toggle="counter-up">9550</h1>
+                <h1 class="text-secondary" data-toggle="counter-up">100+</h1>
                 <h5 class="font-weight-bold">Dry Cleaning</h5>
               </div>
             </div>
@@ -397,7 +404,7 @@
               class="d-flex flex-column align-items-center justify-content-center bg-secondary h-100 py-5 px-3"
             >
               <i class="fa fa-5x fa-certificate text-white mb-5"></i>
-              <h1 class="display-1 text-white mb-3">5+</h1>
+              <h1 class="display-1 text-white mb-3">2+</h1>
               <h1 class="text-white m-0">Years Experience</h1>
             </div>
           </div>
@@ -447,7 +454,9 @@
               >
                 <h2 class="display-2 text-secondary m-0">2</h2>
               </div>
-              <h3 class="font-weight-bold m-0 mt-2">Free Pick Up</h3>
+              <h3 class="font-weight-bold m-0 mt-2">
+                Free Pick Up/ Arrival at site
+              </h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-6">
@@ -464,7 +473,7 @@
               >
                 <h2 class="display-2 text-secondary m-0">3</h2>
               </div>
-              <h3 class="font-weight-bold m-0 mt-2">Dry Cleaning</h3>
+              <h3 class="font-weight-bold m-0 mt-2">Dry Cleaning/ Cleaning</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-6">
@@ -481,7 +490,7 @@
               >
                 <h2 class="display-2 text-secondary m-0">4</h2>
               </div>
-              <h3 class="font-weight-bold m-0 mt-2">Free Delivery</h3>
+              <h3 class="font-weight-bold m-0 mt-2">Perfection!!</h3>
             </div>
           </div>
         </div>
@@ -510,8 +519,8 @@
                   <small
                     class="align-top"
                     style="font-size: 22px; line-height: 45px"
-                    >$</small
-                  >49<small
+                    >Naira</small
+                  >30,000<small
                     class="align-bottom"
                     style="font-size: 16px; line-height: 40px"
                     >/ Mo</small
@@ -519,10 +528,10 @@
                 </h1>
               </div>
               <div class="d-flex flex-column align-items-center py-3">
-                <p>HTML5 & CSS3</p>
-                <p>Bootstrap 4</p>
-                <p>Responsive Layout</p>
-                <p>Compatible With All Browsers</p>
+                <p>Residential Cleaning</p>
+                <p>Clothings</p>
+                <p>Curtains Cleaning</p>
+                <p>Others. Terms and Condition apply</p>
               </div>
               <a href="" class="btn btn-secondary py-2 px-4">Signup Now</a>
             </div>
@@ -539,7 +548,7 @@
                     class="align-top"
                     style="font-size: 22px; line-height: 45px"
                     >$</small
-                  >99<small
+                  >99,000<small
                     class="align-bottom"
                     style="font-size: 16px; line-height: 40px"
                     >/ Mo</small
@@ -547,10 +556,10 @@
                 </h1>
               </div>
               <div class="d-flex flex-column align-items-center py-3">
-                <p>HTML5 & CSS3</p>
-                <p>Bootstrap 4</p>
-                <p>Responsive Layout</p>
-                <p>Compatible With All Browsers</p>
+                <p>Relatively average office size</p>
+                <p>Scrubbings</p>
+                <p>Desk and other cleanab;e properties</p>
+                <p>Others. Terms and Condition apply</p>
               </div>
               <a href="" class="btn btn-primary py-2 px-4">Signup Now</a>
             </div>
@@ -567,7 +576,7 @@
                     class="align-top"
                     style="font-size: 22px; line-height: 45px"
                     >$</small
-                  >149<small
+                  >149,000<small
                     class="align-bottom"
                     style="font-size: 16px; line-height: 40px"
                     >/ Mo</small
@@ -575,10 +584,10 @@
                 </h1>
               </div>
               <div class="d-flex flex-column align-items-center py-3">
-                <p>HTML5 & CSS3</p>
-                <p>Bootstrap 4</p>
-                <p>Responsive Layout</p>
-                <p>Compatible With All Browsers</p>
+                <p>Relatively large office size</p>
+                <p>Scrubbings</p>
+                <p>Desk and other cleanab;e properties</p>
+                <p>Others. Terms and Condition apply</p>
               </div>
               <a href="" class="btn btn-secondary py-2 px-4">Signup Now</a>
             </div>
