updates to text on page

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>DRYME - Free Laundry Service Website Template</title>
+    <title>SPOTLESS</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="Free HTML Templates" name="keywords" />
     <meta content="Free HTML Templates" name="description" />
@@ -444,8 +444,8 @@
         All Rights Reserved. Designed by
         <a
           class="text-white font-weight-medium"
-          href="https://freewebsitecode.com"
-          >Free Website Code</a
+          href="https://prismaticagency.netlify.app/"
+          >Prismatic Solutions</a
         >
       </p>
     </div>
