--- a/blog.html
+++ b/blog.html
@@ -852,8 +852,8 @@
         All Rights Reserved. Designed by
         <a
           class="text-white font-weight-medium"
-          href="https://freewebsitecode.com"
-          >Free Website Code</a
+          href="https://prismaticagency.netlify.app/"
+          >Prismatic Solutions</a
         >
       </p>
     </div>
