--- a/index.html
+++ b/index.html
@@ -861,10 +861,8 @@
           <p>
             Dolor clita stet nonumy clita diam vero, et et ipsum diam labore
           </p>
-          <p>
-            <i class="fa fa-map-marker-alt mr-2"></i>Location, City, Country
-          </p>
-          <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
+          <p><i class="fa fa-map-marker-alt mr-2"></i>Ile-ife, Nigeria</p>
+          <p><i class="fa fa-phone-alt mr-2"></i>234 7040 414 390</p>
           <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
@@ -921,12 +919,13 @@
     <div class="container-fluid bg-dark text-white py-4 px-sm-3 px-md-5">
       <p class="m-0 text-center text-white">
         &copy;
-        <a class="text-white font-weight-medium" href="#">Your Site Name</a>.
-        All Rights Reserved. Designed by
+        <a class="text-white font-weight-medium" href="#"
+          >JKOBS Spotless Solutions</a
+        >. All Rights Reserved. Designed by
         <a
           class="text-white font-weight-medium"
-          href="https://freewebsitecode.com"
-          >Free Website Code</a
+          href="https://prismaticagency.netlify.app/"
+          >Prismatic Solutions</a
         >
       </p>
     </div>
