--- a/pricing.html
+++ b/pricing.html
@@ -352,7 +352,7 @@
         All Rights Reserved. Designed by
         <a
           class="text-white font-weight-medium"
-          href="https://freewebsitecode.com"
+          href="https://prismaticagency.netlify.app/"
           >Free Website Code</a
         >
       </p>
